# Zeuron

./: .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md
include/: ActivationType.hpp  Layer.hpp  Logger.hpp  NeuralNetwork.hpp  Neuron.hpp  Random.hpp  Timer.hpp  Visualizer.hpp
src/: Layer.cpp  Logger.cpp  NeuralNetwork.cpp  Neuron.cpp  Random.cpp  Timer.cpp  Visualizer.cpp
tests/: AND.cpp  CircleClassification.cpp  MultiClassClassification.cpp  OR.cpp  Sinusoidal.cpp  XOR.cpp
